# TwinRankAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.en.md  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: retailrocket_twin_tower.yaml
docs/: architecture.md  manual_demo_plugavel.md  model_card.md  production_demo.md
dummy_data/: orders_sample.csv  products_sample.csv
scripts/: export_metrics_for_readme.py  validate_env.py
src/reco/: settings.py
src/reco/data/: preprocessing.py  schema.py
src/reco/demo/: ecommerce_demo.py
src/reco/frontend/: app.py  ecommerce_app.py  utils.py
src/reco/frontend/.streamlit/: config.toml
src/reco/frontend/pages/: 01_🏠_Home.py  01_🏠_Inicio.py  02_📊_Analytics.py  02_📊_Metricas.py  03_🧠_Embeddings.py  03_🧠_Representacao_Vetorial.py  04_🚀_Recomendacoes.py  04_🚀_Recommendations.py  05_⚙️_Model.py  05_⚙️_Modelo.py  06_📈_MLflow.py  07_📚_About.py  07_📚_Sobre.py
src/reco/frontend/styles/: style.css
src/reco/models/: __init__.py  base.py  baseline.py  factory.py  two_tower.py
src/reco/pipelines/: __init__.py  evaluate.py  feature_eng.py  preprocess.py
src/reco/serving/: __init__.py  api.py  schemas.py  service.py
src/reco/training/: __init__.py  evaluate.py  mlflow_utils.py  train.py
src/reco/utils/: logging.py
tests/: conftest.py
tests/unit/: test_evaluate.py
