[tool.poetry]
name = "retailrocket-reco"
version = "0.1.0"
description = "Sistema de recomendação two-tower para e-commerce (RetailRocket) — Tech Challenge Fase 2"
authors = ["Vitor Silva"]
readme = "README.md"
packages = [{ include = "reco", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
mlflow = "^2.14.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
pandera = "^0.19.0"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
dvc = { extras = ["s3"], version = "^3.51.0" }
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
redis = "^5.0.0"
streamlit = "^1.36.0"
requests = "^2.32.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.5.0"
pre-commit = "^3.7.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=src/reco --cov-report=term-missing"
